gcr: work around issue in giscanner

https://bugzilla.gnome.org/show_bug.cgi?id=720504